display SVG with dummy input

--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <script src="//unpkg.com/brain.js" defer></script>
-    <script src='script.js' defer></script>
+    <script src="script.js" defer></script>
     <title>Document</title>
   </head>
   <body>
-
-
+    <img id="diagram" />
   </body>
 </html>
